--- a/build.gradle
+++ b/build.gradle
@@ -208,7 +208,8 @@ configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
         // Compile dependencies
         provided "com.intellij:annotations:12.0"
         compile "com.almworks.sqlite4java:sqlite4java:0.282"
-        provided("org.robolectric:android-all:$robolectricVersion") { force = true }
+//        provided("org.robolectric:android-all:$robolectricVersion") { force = true }
+        provided("org.robolectric:android-all:${AndroidSdk.versions[AndroidSdk.latestVersion]}") { force = true }
         compile "com.ibm.icu:icu4j:53.1"
 
         jni "com.github.axet.litedb:libsqlite:0.282-3:natives-mac-x86_64"
